<resources>
    <string name="app_name">Asystent zastrzyków</string>
    <string name="about_app">Aplikacja pozwala na zdefiniowanie harmonogramu powiadomień o zbliżającym się czasie aplikacji leku oraz wskazuje miejsce wykonania zastrzyku. Użytkownik ma możliwość wprowadzić dodatkowe informacje takie jak ewentualne niepożądane objawy czy problemy w aplikacji zastrzyku. Dodatkowo możliwe jest zarządzanie posiadanymi zasobami leku, przypominanie o kończącym się ich zapasie oraz przeglądanie historii terapii wraz ze szczegółowymi informacjami o objawach czy innych dolegliwościach towarzyszących terapii. Aplikacja pozwala dodatkowo na wygenerowaniu łatwego w interpretacji raportu dla lekarza prowadzącego bądź pielęgniarki.</string>
    <string name="name_text_view_hint">podaj swoje imię i nazwisko</string>
    <string name="doctor_name_text_view_hint">podaj imie i nazwisko swojego lekarza</string>
    <string name="nurse_name_text_view_hint">podaj imię i nazwisko swojej pielęgniarki</string>
    <string name="intial_settings_button_next_text">przejdź dalej</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_interferon">"Interferon Beta- 1B" stosowany jest w leczeniu stwardnienia rozsianego. Wstrzykuje się go podskórnie co drugi dzień.\nDla osągnięcia optymalnych wyników leczenia należy ściśle przestrzegać zaleceń lekarza odnośnie odstępów między kolejnymi injekcjami leku. Bardzo ważne jest, aby stosować lek regularnie, bez żadnych przerw. Niniejszy dzienniczek ma za zadanie pomóc Tobie i lekarzowi monitorować odstępy między kolejnymi wstrzyknięciami i kontrolować przebieg leczenia.\nMiejsce wstrzyknięcia należy regularnie zmieniać, aby zmniejszyć ryzyko wystąpenia odczynów skórnych w miejscach podania leku. Każde pole do wstrzyknięcia można wykorzytać najwyżej raz na 2 tygodnie.\nJak wynika z zebranych doświadczeń, najlepiej jest wybierać najbardziej odległe miejsca w obrębie danej okolicy.\nSkontaktuj się natychmiast ze swoim lekarzem albo pielęgniarką, jeśli w miejscu wstrzyknięcia pojawią się objawy niepożądane, jak zaczerwienienie, ból, obrzęk albo zgrubienie.\nWażne jest zachowanie ciągłości leczenia, ale jeśli zapomnisz to nie znaczy, że całe leczenie pójdzie na marne. Dobrze jest wstrzykiwać lek o tej samej porze dnia, dlatego też jeśli we wtorek rano zapomnisz sobie, że nie zrobiłeś zastrzyku w poniedziałek wieczorem, to po prostu poczekaj i zrób zastrzyk we wtorek wieczorem. W ten sposób następna injekcja wypadnie w czwartek wieczorem po upływnie 48 godzin.\nJeśli potrzebujesz dodatkowych informacji, jesli masz pytania albo jeśtli potrzebujesz wsparcia i pomocy, skontaktuj się z lekarzem prowadzącym lub pielęgniarką.
    </string>
    <string name="about_interferon_header">Drogi Pacjencie,\nDroga Pacjentko</string>
    <string name="date_text_view">podaj datę pierwszego zastrzyku</string>
    <string name="time_text_view">podaj godzinę zastrzyków</string>
    <string name="firstInjection_text">aplikacja ma na celu ułatwienie i lepsze zorganizowanie przyjmowania leku. Podaj godzinę, o której chcesz dostawać przypomnienie o aplikacji leku, a następnie datę pierwszego zastrzyku</string>
    <string-array name="titles">
        <item>ekran główny</item>
        <item>historia</item>
        <item>zarządzaj lekiem</item>
        <item>generuj raport</item>
        <item>divider</item>
        <item>statystyki</item>
        <item>ustawienia</item>
        <item>pomoc</item>
        <item>o aplikacji</item>
    </string-array>
    <string name="menu_main">ekran główny</string>
    <string name="menu_history">historia</string>
    <string name="menu_reserve">zarządzaj lekiem</string>
    <string name="menu_settings">opcje</string>
    <string name="menu_app_settings">opcje aplikacji</string>
    <string name="menu_schedule_settings">opcje przypomnień</string>
    <string name="menu_help">pomoc</string>
    <string name="menu_about">o aplikacji</string>
    <string name="open_drawer">otworz</string>
    <string name="close_drawer">zamknij</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string-array name="settings_array">
        <item>ustawienia użytkownika</item>
        <item>ustawienia powiadomień</item>
        <item>ustawienia motywu</item>
    </string-array>
    <string name="save_text">zapisz zmiany</string>
    <string name="button_inject_text">wykonaj zastrzyk</string>
    <string name="buttonPostpone">odłóż</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="injection_date_text">data zastrzyku:</string>
    <string name="injection_point_text">miejsce:</string>
    <string name="symptons_text">objawy:</string>
    <string name="temperature_text">gorączka</string>
    <string name="trembles_text">dreszcze</string>
    <string name="ache_text">ból mięsni</string>
    <string name="last_injection_text">szczegóły ostatniego zastrzyku:</string>
    <string name="drug_supply_text">Podaj ilość dawek leku, które posiadasz w tym momencie. Program pomoże Ci zarządzać zapasami leku i poinformuje Cię jeżeli będziesz musiał uzupełnic zapas.</string>
    <string name="drug_supply_hint">ilosc leku</string>
    <string name="drug_remaining_text">Wpisz przy ilu dawkach program ma przypominać o uzupełnieniu zapasu</string>
    <string name="notification_doses_hint">ilość pozostałych dawek</string>
    <string name="send_report_button_text">wyslij raport</string>
    <string name="generate_report_text">generuj raport</string>
    <string name="email_text_view_hint">email lekarza lub pielęgniarki</string>
    <string name="title_1">Wykonanie zastrzyku</string>
    <string name="description_1">Po kliknięciu notyfikacji lub kliknięciu przycisku wykonaj zastrzyk zostaniesz przekierowany do ekranu wykonania zastrzyku. Na ekranie wskazane jest dokładne miejsce aplikacji leku. Możesz odłożyć zastrzyk w czasie klikając przycisk odłóż lub wykonać zastrzyk i wcisnąć przycisk wykonaj zastrzyk. </string>
    <string name="title_2">Historia zastrzyków</string>
    <string name="description_2">Po wybraniu z menu opcji historia zastrzyków i wybraniu z listy konkretnego zastrzyku, zostaniesz przekierowany do szczegółowego widoku w którym wskazane jest miejsce aplikacji leku oraz zapisane objawy. Jeżeli chcesz możesz wysłać wygenerowany plik pdf bezpośrednio na email swojego lekarza lub pielęgniarki.</string>
    <string name="title_3">Zarządzanie ilością leku</string>
    <string name="description_3">Po wybraniu z menu opcji leku zostaniesz przekierowany do ekranu ustawień związanych z lekiem. Możesz uzupełnić ilość leku poprzez wpisanie nowej wartości dawek w polu lub ustawić przy jakiej ilości leku będzie wysyłane przypomnienie o uzupełnieniu.</string>
    <string name="title_4">Generowanie raportu</string>
    <string name="description_4">Po wybraniu z menu opcji generowania raportu możesz wybrać, z których dokładnie zastrzyków potrzebujesz raport. Po zaznaczeniu zastrzyków i wciśnięciu przycisku generuj raport możesz wyświetlić wygenerowany dokument lub wysłać bezpośrednio na emaila lekarza lub pielęgniarki.</string>
    <string name="title_0">O programie</string>
    <string name="app_style_description_text">Na początek wybierz wygląd aplikacji, który bardziej Ci odpowiada</string>
    <string name="notification_title">czas zastrzyku</string>
    <string name="norification_text">Zbliża się czas kolejnej dawki leku</string>
    <string name="postone_not_allowed_title" >Nie można odłożyć zastrzyku</string>
    <string name="postone_not_allowed_message" >Nie można odłożyć zastrzyku wykonywanego manualnie</string>
    <string name="invalid_email_title">Zły email</string>
    <string name="invalid_email_message">Podaj prawidłowy email</string>
    <string name="characters_not_allowed_title"></string>
    <string name="characters_not_allowed_message">Użyłeś niedozwolonych znaków</string>
    <string name="manual_injection_time_alert_message">Jesteś pewny, że chcesz wykonać zastrzyk długo przed docelowym czasem?</string>

</resources>
