<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50px"
    tools:context=".fragments.LastInjectionDetailsFragment"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/injection_date_text"
        android:id="@+id/injectionDateTextView"
        android:layout_row="0"
        android:layout_column="0" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/injection_point_text"
        android:id="@+id/injectionPointtextView"
        android:layout_row="0"
        android:layout_column="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/symptons_text"/>
            <CheckBox
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature_text"
                android:id="@+id/temperatureCheckBox" />
            <CheckBox
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/trembles_text"
            android:id="@+id/tremblesCheckBox"/>
            <CheckBox
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/ache_text"
            android:id="@+id/acheCheckBox"/>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/save_text"
        android:id="@+id/button"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@drawable/button"
        android:onClick="onButtonSaveSymptomsClick"/>

    <android.opengl.GLSurfaceView
        android:id="@+id/glSurfaceView"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_rowSpan="2"/>

</GridLayout>
