<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_pdf"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:id="@+id/injectionDateTextView"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/injection_date_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/symptons_text" />

            <CheckBox
                android:id="@+id/temperatureCheckBox"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature_text"
                android:textSize="@dimen/text_size_medium" />

            <CheckBox
                android:id="@+id/tremblesCheckBox"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/trembles_text"
                android:textSize="@dimen/text_size_medium" />

            <CheckBox
                android:id="@+id/acheCheckBox"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/ache_text"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

    </GridLayout>
</RelativeLayout>
