<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.karolskora.msorgranizer.fragments.DrugSupplyFragment"
    android:background="?frame_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drug_supply_text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_medium"
        android:textColor="?textColor"/>

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dosesEditText"
        android:hint="@string/drug_supply_hint"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="?textColor"
        android:background="?background_color"
        android:textColorHint="?textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/drug_remaining_text"
        android:layout_below="@+id/dosesEditText"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_medium"
        android:id="@+id/textView2"
        android:textColor="?textColor"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notificationDosesEditText"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView2"
        android:hint="@string/notification_doses_hint"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="?textColor"
        android:textColorHint="?textColor"
        android:background="?background_color"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intial_settings_button_next_text"
        android:id="@+id/button2"
        android:layout_below="@+id/notificationDosesEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:onClick="onButtonNextClick"/>

</RelativeLayout>
