<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karolskora.msorgranizer.activities.AboutActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_yellow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_interferon_header"
            android:id="@+id/headerAboutTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/initial_settings_button_next_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_interferon"
            android:id="@+id/aboutTextView"
            android:layout_below="@+id/headerAboutTextView"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_medium"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intial_settings_button_next_text"
            android:id="@+id/initialSettingsButtonNext"
            android:background="@drawable/button"
            android:width="2000dp"
            android:textSize="@dimen/text_size_medium"
            android:layout_below="@+id/aboutTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

    </RelativeLayout>


</ScrollView>
